added text to html, basic css styles

--- a/index.html
+++ b/index.html
@@ -2,11 +2,52 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css"/>
+        <meta name="author" content="Michelle Di Guglielmo">
+        <meta name="description" content="A Website Introducing Me">
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <script src="script.js"></script>
+        <header>
+           
+            <h1>Introducing Michelle</h1>
+            <!-- add img - float right -->
+             <!-- add nav -->
+        </header>
+        <main>
+            <h2>My journey</h2>
+            <p>I am a high school educator of 10 years, specialising in teaching English to senior students. I've recently decided to expand my skill set by learning how to code.</p>
+
+            <h2>My qualifications</h2>
+
+            <table>
+               <tr>
+                    <th>Year</th>
+                    <th>Qualification</th>
+                </tr>
+                <tr>
+                    <td>2008</td>
+                    <td>High School</td>
+                </tr>
+                <tr>
+                    <td>2011</td>
+                    <td>Diploma of Music (Voice) </td>
+                </tr>
+                <tr>
+                    <td>2012</td>
+                    <td>Bachelor of Arts (with Honours)</td>
+                </tr>  
+                <tr>
+                    <td>2014</td>
+                    <td>Master of Teaching</td>
+                </tr> 
+            </table>
+        </main>
+        <footer>
+            <!-- contact info -->
+             <!-- form -->
+        </footer>
+      
+        <script src="script.js"></script>  
     </body>
 
 </html>
