added js alert to submit button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <textarea name="message" id="message" cols="20" rows="5">Enter Message</textarea>
                             </p>
                 
-                            <button type="submit">submit</button>
+                            <button type="submit" id="button">submit</button>
                     </fieldset>
                 </form>
         </main>
