--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css"/>
+        <script defer src="script.js"></script>  
         <meta name="author" content="Michelle Di Guglielmo">
         <meta name="description" content="A Website Introducing Me">
         <title>My Personal Website</title>
@@ -90,7 +91,7 @@
             <p><a href="#">Back to Top</a></p>   
         </footer>
       
-        <script src="script.js"></script>  
+       
     </body>
 
 </html>
